[metadata]
    name = RL_Toy
    author = Roberto-Esteban López
    author_email = robertolopez94@outlook.com
    version = 0.9b.0
    description = Reinforcement Learning toy code
    long_description = file: README.md
[options]
    packages = find:
    install_requires = 
        gif
        ipython
        gym~=0.23.1
        matplotlib~=3.6.0
        numpy<1.24.0,>=1.20.0
        pygame
    python_requires = >=3.10